tests/NormalTests/paczka2/big_fuzzy/59821952.err
Error in line 2: 1sa9s A695 4,82
Error in line 1: h0z3 S295 85,0
Error in line 10: h0z3 S562 62,8
Error in line 13: h0z3 A867 99,0
Error in line 29: S295 S295 14,0
Error in line 34: r8P S295 173,1
Error in line 43: 1sa9s S562 55,7
Error in line 54: h0z3 S295 50,2
Error in line 55: h0z3 S562 72,1
Error in line 57: h0z3 A695 96,5
Error in line 31: q1E A867 41,0
Error in line 70: WvyXFPv S562 0,9
Error in line 75: S295 S562 35,7
Error in line 91: WvyXFPv A695 36,4
Error in line 93: WvyXFPv S562 72,8
Error in line 96: WvyXFPv A695 4,6
Error in line 94: BC3NcNE A695 36,3
Error in line 108: q1E A867 94,5
Error in line 113: h0z3 S562 4,1
Error in line 114: h0z3 S295 28,4
Error in line 127: q1E S295 72,1
Error in line 136: 1sa9s A867 "1,8
Error in line 137: r8P A695 25,4
Error in line 149: r8P A867 93,1
Error in line 157: q1E SU62 80,2
Error in line 142: q1E A867 25,8
Error in line 160: WvyXFPv A867 40,9
Error in line 164: h0z3 A867 30,0
Error in line 153: S295 S562 58,9
Error in line 159: q1E S562 351,3
Error in line 177: BC3NcNE A695 41,9
Error in line 190: h0z3 A695 80,5
Error in line 195: BC3NcNE A867 36,6
Error in line 198: BC3NcNE S562 50,1
Error in line 199: S295 S295 46,3
Error in line 152: 1sa9s A867 111,9
Error in line 200: BC3NcNE S295 11,7
Error in line 221: 1sa9s A867 7,7
Error in line 223: 1sa9s S295 40,9
Error in line 215: WvyXFPv S562 457,7
Error in line 229: WvyXFPv A695 12,8
Error in line 230: BC3NcNE A695 7,2
Error in line 242: r:P A:67 202,:
